made the website mobile responsive

--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <link rel="stylesheet" href="css/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
     <title>Design Landing Page</title>
   </head>
   <body>
@@ -29,20 +26,12 @@
       <div class="intro-section">
         <div class="left-section">
           <h1>Web Design</h1>
-          <h4>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
-            quidem. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Quisquam, quidem.
-          </h4>
+          <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</h4>
           <button class="learn-more-btn">LEARN MORE</button>
         </div>
         <div class="imgs-div">
           <img src="./images/vector.svg" alt="vector-img" class="vector-img" />
-          <img
-            src="./images/vector-dot.svg"
-            alt="vector-dot"
-            class="vector-dot"
-          />
+          <img src="./images/vector-dot.svg" alt="vector-dot" class="vector-dot" />
           <img src="./images/intro-img.svg" alt="intro-img" />
         </div>
       </div>
